app/06.adservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  namespace: gallery
spec:
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: adservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "9555"
        - name: JAEGER_SERVICE_ADDR
          value: jaeger-collector:14268
        image: quay.io/linuxeroagrio/adservice:latest
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:9555
          initialDelaySeconds: 20
          periodSeconds: 15
        name: server
        ports:
        - containerPort: 9555
        - containerPort: 9393
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:9555
          initialDelaySeconds: 20
          periodSeconds: 15
        resources:
          limits:
            cpu: 300m
            memory: 300Mi
          requests:
            cpu: 200m
            memory: 180Mi
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
