app/10.cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  namespace: gallery
spec:
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: cartservice
    spec:
      containers:
      - env:
        - name: REDIS_ADDR
          value: redis-cart:6379
        image: quay.io/linuxeroagrio/cartservice:latest
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:7070
            - -rpc-timeout=5s
          initialDelaySeconds: 15
          periodSeconds: 10
        name: server
        ports:
        - containerPort: 7070
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:7070
            - -rpc-timeout=5s
          initialDelaySeconds: 15
        resources:
          limits:
            cpu: 300m
            memory: 128Mi
          requests:
            cpu: 200m
            memory: 64Mi
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
