app/15.currencyservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
  namespace: gallery
spec:
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: currencyservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "7000"
        - name: DISABLE_PROFILER
          value: "1"
        - name: DISABLE_DEBUGGER
          value: "1"
        image: quay.io/linuxeroagrio/currencyservice:latest
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:7000
        name: server
        ports:
        - containerPort: 7000
          name: grpc
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:7000
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
