app/23.loadgenerator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
      labels:
        app: loadgenerator
    spec:
      containers:
      - env:
        - name: FRONTEND_ADDR
          value: frontend:80
        - name: USERS
          value: "10"
        image: quay.io/linuxeroagrio/loadgenerator:latest
        name: main
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 300m
            memory: 256Mi
      restartPolicy: Always
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
