app/29.recommendationservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  namespace: gallery
spec:
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: recommendationservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice:3550
        - name: DISABLE_PROFILER
          value: "1"
        - name: DISABLE_DEBUGGER
          value: "1"
        image: quay.io/linuxeroagrio/recommendationservice:latest
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:8080
          periodSeconds: 5
        name: server
        ports:
        - containerPort: 8080
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:8080
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 450Mi
          requests:
            cpu: 100m
            memory: 220Mi
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
