app/33.shippingservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  namespace: gallery
spec:
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: shippingservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "50051"
        - name: DISABLE_PROFILER
          value: "1"
        - name: JAEGER_SERVICE_ADDR
          value: jaeger-collector:14268
        image: quay.io/linuxeroagrio/shippingservice:latest
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:50051
        name: server
        ports:
        - containerPort: 50051
        - containerPort: 9393
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:50051
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      serviceAccountName: default
