app/07.adservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adservice
  name: adservice
  namespace: gallery
spec:
  ports:
  - name: grpc
    port: 9555
    targetPort: 9555
  - name: metrics
    port: 9393
  selector:
    app: adservice
  type: ClusterIP
