app/11.cartservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: gallery
spec:
  ports:
  - name: grpc
    port: 7070
    targetPort: 7070
  selector:
    app: cartservice
  type: ClusterIP
