app/13.checkoutservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: checkoutservice
  name: checkoutservice
  namespace: gallery
spec:
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
  - name: metrics
    port: 9393
  selector:
    app: checkoutservice
  type: ClusterIP
