app/16.currencyservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  namespace: gallery
spec:
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
  selector:
    app: currencyservice
  type: ClusterIP
