app/18.emailservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: gallery
spec:
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
  selector:
    app: emailservice
  type: ClusterIP
