app/20.frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: gallery
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: metrics
    port: 9393
  selector:
    app: frontend
  type: ClusterIP
