app/21.frontend-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-external
  namespace: gallery
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: frontend
  type: LoadBalancer
