app/25.paymentservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: gallery
spec:
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
  selector:
    app: paymentservice
  type: ClusterIP
