app/27.productcatalogservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: productcatalogservice
  name: productcatalogservice
  namespace: gallery
spec:
  ports:
  - name: grpc
    port: 3550
    targetPort: 3550
  - name: metrics
    port: 9393
  selector:
    app: productcatalogservice
  type: ClusterIP
