app/30.recommendationservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: gallery
spec:
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
  selector:
    app: recommendationservice
  type: ClusterIP
