app/32.redis-cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  namespace: gallery
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    app: redis-cart
  type: ClusterIP
