app/34.shippingservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shippingservice
  name: shippingservice
  namespace: gallery
spec:
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
  - name: metrics
    port: 9393
  selector:
    app: shippingservice
  type: ClusterIP
