app/00.allow-egress-googleapis-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-googleapis
  namespace: gallery
spec:
  hosts:
  - accounts.google.com
  - '*.googleapis.com'
  ports:
  - name: http
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: HTTPS
