app/01.allow-egress-google-metadata-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-google-metadata
  namespace: gallery
spec:
  addresses:
  - 169.254.169.254
  hosts:
  - metadata.google.internal
  ports:
  - name: http
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: HTTPS
